--- a/HTMLV2/ejercicio10.html
+++ b/HTMLV2/ejercicio10.html
@@ -9,47 +9,46 @@
 -->
 
 <!DOCTYPE html>
-    <html lang="es">
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Ejemplo de tabla sencilla</title>
-        </head>
-        <body>
-            <h1>Su pedido</h1>
-            <table>
-                <tr>
-                    <th scope="col">nombre producto</th>
-                    <th scope="col">Precio unitario</th>
-                    <th scope="col">Unidades</th>
-                    <th scope="col">Subtotal</th>
-                </tr>
-                <tr>
-                    <td>Reproductor MP3(80GB)</td>
-                    <td>192.02</td>
-                    <td>1</td>
-                    <td>192.02</td>              
-                </tr>
-                <tr>
-                    <td>fundas de colores</td>
-                    <td>2.50</td>
-                    <td>5</td>
-                    <td>12.50</td>
-                </tr>
-                <tr>
-                    <td>Reproductor de radio &amp;control remoto</td>
-                    <td>12.99</td>
-                    <td>1</td>
-                    <td>12.99</td>
-                </tr>
-                <tr>
-                    <th scope="row">TOTAL</th>
-                    <td>_</td>
-                    <td>7</td>
-                    <td><strong>207.51</strong></td>
-                </tr>
-            </table>
-
-        </body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ejemplo de tabla sencilla</title>
+  </head>
+  <body>
+    <h1>Su pedido</h1>
+    <table>
+      <tr>
+        <th scope="col">nombre producto</th>
+        <th scope="col">Precio unitario</th>
+        <th scope="col">Unidades</th>
+        <th scope="col">Subtotal</th>
+      </tr>
+      <tr>
+        <td>Reproductor MP3(80GB)</td>
+        <td>192.02</td>
+        <td>1</td>
+        <td>192.02</td>
+      </tr>
+      <tr>
+        <td>fundas de colores</td>
+        <td>2.50</td>
+        <td>5</td>
+        <td>12.50</td>
+      </tr>
+      <tr>
+        <td>Reproductor de radio &amp;control remoto</td>
+        <td>12.99</td>
+        <td>1</td>
+        <td>12.99</td>
+      </tr>
+      <tr>
+        <th scope="row">TOTAL</th>
+        <td>_</td>
+        <td>7</td>
+        <td><strong>207.51</strong></td>
+      </tr>
+    </table>
+  </body>
 </html>
