--- a/HTMLV2/ejercicio12.html
+++ b/HTMLV2/ejercicio12.html
@@ -10,71 +10,97 @@
 
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ejemplo de tabla compleja</title>
-        <link rel="stylesheet" href="./css/ejercicio.css">
-    </head>
-    <body>
-        <h3>Ejemplo tabla compleja</h3>
-        <table> 
-            <caption>Tabla comparativa de las caracteristicas tecnicas de los reproductores MP3</caption>
-            <tr>
-                <th></th>
-                <th abbr="Reproductor mini" scope="col" colspan="3">
-                    <img src="./img/reproductor mini.jpg" class="imag1" alt="imagen de reprofuctor mini"/>
-                    <img src="./img/reproductor m ini.jpg" class="imag1" alt="imagen de reprofuctor mini"/>
-                    <br/><strong>MP3 mini</strong>
-                </th>
-                <th abbr="Reproductor Estandar" scope="col" colspan="2">
-                    <img src="./img/Reproductor Estandar.jpg" class="imag1" alt="Imagen de Reproductor Estandar"/>
-                    <img src="./img/Reproductor Estandar a.jpg" class="imag1" alt="Imagen de Reproductor Estandar"/>
-                    <br/><strong>MP3 grande</strong>
-                </th></tr>
-            <tr>
-                <th scope="row" abbr="Capacidad">Capacidad de almacenamiento</th>
-                <td>4GB<br/>(1.000 canciones</td>
-                <td>8GB<br/>(2.000 canciones</td>
-                <td>16GB<br/>(4.000 canciones</td>
-                <td>30GB<br/>(7.500 canciones</td>
-                <td>80GB<br/>(20.000 canciones</td>
-            </tr>
-            <tr>
-                <th scope="row" abbr="colores disponibles">Colores</th>
-                <td>
-                    <img src="./img/blanco.jpg"class="imag1"  alt="Color blanco"/>
-                </td>
-                <td>
-                    <img src="./img/red.jpg" class="imag1" alt="Color rojo"/>
-                    <img src="./img/reproductor mini.jpg"class="imag1"  alt="Color verde"/>
-                    <img src="./img/reproductor m ini.jpg" class="imag1" alt="Color azul"/>
-                    <img src="./img/rosa.jpg" class="imag1" alt="Color rosa"/> 
-                </td>
-                <td>
-                    <img src="./img/Negro.jpg"  class="imag1" alt="Color negro"/>
-                </td>
-                <td colspan="2">
-                    <img src="./img/blanco gran.jpg" class="imag1" alt="Color blanco"/>
-                    <img src="./img/Negro.jpg" class="imag1" alt="Color negro"/>
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" abbr="Tamaño de pantalla">Pantalla</th>
-                <td colspan="3">LCD de 3cm (diagonal) con retroiluminacion</td>
-                <td colspan="2">LCD de 6cm (diagonal) con retroiluminacion</td>
-            </tr>
-            <tr>
-                <th rowspan="2" scope="row" abbr="Tiempo de carga">Tiempo de carga</th>
-                <td rowspan="2" colspan="3">Unas 3 horas</td>
-                <td colspan="2">Unas 4 horas</td>
-            </tr>
-            <tr>
-                <td colspan="2">Unas 2 horas para alcanzar el 80% de la capacidad</td>
-            </tr>
-        </table>
-        
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ejemplo de tabla compleja</title>
+    <link rel="stylesheet" href="./css/ejercicio.css" />
+  </head>
+  <body>
+    <h3>Ejemplo tabla compleja</h3>
+    <table>
+      <caption>
+        Tabla comparativa de las caracteristicas tecnicas de los reproductores
+        MP3
+      </caption>
+      <tr>
+        <th></th>
+        <th abbr="Reproductor mini" scope="col" colspan="3">
+          <img
+            src="./img/reproductor mini.jpg"
+            class="imag1"
+            alt="imagen de reprofuctor mini"
+          />
+          <img
+            src="./img/reproductor m ini.jpg"
+            class="imag1"
+            alt="imagen de reprofuctor mini"
+          />
+          <br /><strong>MP3 mini</strong>
+        </th>
+        <th abbr="Reproductor Estandar" scope="col" colspan="2">
+          <img
+            src="./img/Reproductor Estandar.jpg"
+            class="imag1"
+            alt="Imagen de Reproductor Estandar"
+          />
+          <img
+            src="./img/Reproductor Estandar a.jpg"
+            class="imag1"
+            alt="Imagen de Reproductor Estandar"
+          />
+          <br /><strong>MP3 grande</strong>
+        </th>
+      </tr>
+      <tr>
+        <th scope="row" abbr="Capacidad">Capacidad de almacenamiento</th>
+        <td>4GB<br />(1.000 canciones</td>
+        <td>8GB<br />(2.000 canciones</td>
+        <td>16GB<br />(4.000 canciones</td>
+        <td>30GB<br />(7.500 canciones</td>
+        <td>80GB<br />(20.000 canciones</td>
+      </tr>
+      <tr>
+        <th scope="row" abbr="colores disponibles">Colores</th>
+        <td>
+          <img src="./img/blanco.jpg" class="imag1" alt="Color blanco" />
+        </td>
+        <td>
+          <img src="./img/red.jpg" class="imag1" alt="Color rojo" />
+          <img
+            src="./img/reproductor mini.jpg"
+            class="imag1"
+            alt="Color verde"
+          />
+          <img
+            src="./img/reproductor m ini.jpg"
+            class="imag1"
+            alt="Color azul"
+          />
+          <img src="./img/rosa.jpg" class="imag1" alt="Color rosa" />
+        </td>
+        <td>
+          <img src="./img/Negro.jpg" class="imag1" alt="Color negro" />
+        </td>
+        <td colspan="2">
+          <img src="./img/blanco gran.jpg" class="imag1" alt="Color blanco" />
+          <img src="./img/Negro.jpg" class="imag1" alt="Color negro" />
+        </td>
+      </tr>
+      <tr>
+        <th scope="row" abbr="Tamaño de pantalla">Pantalla</th>
+        <td colspan="3">LCD de 3cm (diagonal) con retroiluminacion</td>
+        <td colspan="2">LCD de 6cm (diagonal) con retroiluminacion</td>
+      </tr>
+      <tr>
+        <th rowspan="2" scope="row" abbr="Tiempo de carga">Tiempo de carga</th>
+        <td rowspan="2" colspan="3">Unas 3 horas</td>
+        <td colspan="2">Unas 4 horas</td>
+      </tr>
+      <tr>
+        <td colspan="2">Unas 2 horas para alcanzar el 80% de la capacidad</td>
+      </tr>
+    </table>
+  </body>
 </html>
-
