--- a/HTMLV3/ejercicio5.html
+++ b/HTMLV3/ejercicio5.html
@@ -11,18 +11,20 @@
 
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Ejercicio 5</title>
-    <link rel="stylesheet" href="./css/style5.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style5.css" />
+  </head>
+  <body>
     <div id="container">
-    <h1>Sintaxis de la etiqueta &it;blockquote&gt;</h1>
-        <p id="ch1">
-            la sintaxis de la etiqueta &it;blockquote&gt;se muestra a continuacion:<br/><br/>
-            &it;blockquote cite=&quot;<em>... direccion original de la cita...</em>&quot;&gt;texto que se cita&it;/blockquote&gt;
-        </p>
+      <h1>Sintaxis de la etiqueta &it;blockquote&gt;</h1>
+      <p id="ch1">
+        la sintaxis de la etiqueta &it;blockquote&gt;se muestra a
+        continuacion:<br /><br />
+        &it;blockquote cite=&quot;<em>... direccion original de la cita...</em
+        >&quot;&gt;texto que se cita&it;/blockquote&gt;
+      </p>
     </div>
-</body>
+  </body>
 </html>
