--- a/HTMLV3/ejercicio7.html
+++ b/HTMLV3/ejercicio7.html
@@ -11,25 +11,35 @@
 
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Ejercicio 7</title>
-        <link rel="stylesheet" href="./css/style7.css">
-    </head>
-    <body>
-        <div id="container">
-        <h1>Menú</h1>
-                <ul>
-                    <li id="ch1">Inicio</li>
-                    <li>
-                    <strong id="ch2">Noticias</strong>
-                    </li>
-                </ul>
-                <ul>
-                    <li id="ch3"><a href="#" title="Ver las noticias mas recientes">recientes</a></li>
-                    <li id="ch4"><strong><a href="#" title="Ver las noticias mas leidas">Mas leidas</a></strong></li>
-                    <li id="ch5"><a href="#" title="Ver las noticias mas valoradas">Mas valoradas</a></li>
-                </ul>
-           </div>    
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ejercicio 7</title>
+    <link rel="stylesheet" href="./css/style7.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1>Menú</h1>
+      <ul>
+        <li id="ch1">Inicio</li>
+        <li>
+          <strong id="ch2">Noticias</strong>
+        </li>
+      </ul>
+      <ul>
+        <li id="ch3">
+          <a href="#" title="Ver las noticias mas recientes">recientes</a>
+        </li>
+        <li id="ch4">
+          <strong
+            ><a href="#" title="Ver las noticias mas leidas"
+              >Mas leidas</a
+            ></strong
+          >
+        </li>
+        <li id="ch5">
+          <a href="#" title="Ver las noticias mas valoradas">Mas valoradas</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
