--- a/HTMLV3/ejercicio1.html
+++ b/HTMLV3/ejercicio1.html
@@ -11,17 +11,23 @@
 
 <!DOCTYPE html>
 <html lang="es">
-        <head>
-            <meta charset="UTF-8">
-            <title>Ejercicio 1</title>
-            <link rel="stylesheet" href="./css/style1.css">
-        </head>
-        <body>
-            <div id="container">
-                <h1>Lenguaje html</h1>
-                <p id="ch11"> El lenguaje HTML es <strong>tan sencillo</strong>que practicamente se entiende sin estudiar el significado de sus etiquetas principales</p>
-                <p id="ch2"> Ademas de textos en <strong>negrita</strong>,tambien se pueden poner<em>en cursiva</em>o<del>tachados</del></p>
-
-            </div>   
-        </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ejercicio 1</title>
+    <link rel="stylesheet" href="./css/style1.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1>Lenguaje html</h1>
+      <p id="ch11">
+        El lenguaje HTML es <strong>tan sencillo</strong>que practicamente se
+        entiende sin estudiar el significado de sus etiquetas principales
+      </p>
+      <p id="ch2">
+        Ademas de textos en <strong>negrita</strong>,tambien se pueden poner<em
+          >en cursiva</em
+        >o<del>tachados</del>
+      </p>
+    </div>
+  </body>
 </html>
