--- a/HTMLV3/ejercicio15.html
+++ b/HTMLV3/ejercicio15.html
@@ -1,4 +1,3 @@
-
 <!--
     ENTIDAD: Centro de Biotecnologia Agropecuaria
     FICHA: 2558346
@@ -8,53 +7,75 @@
     FECHA DE MODIFICACION:07/08/22
 -->
 
-
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Ejercicio 15</title>
-        <link rel="stylesheet" href="./css/style15.css">
-    </head>
-    <body>
-        <div id="container">
-        <h3>Informacion sobre el producto</h3>
-        <form action="/php/insertar_subasta.php" method="post" enctype="multipart/form-data">
-            <fieldset>
-                <legend id="ch1">Datos Basicos</legend>
-                <label id="ch2" for="nombre">Nombre</label> <br />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ejercicio 15</title>
+    <link rel="stylesheet" href="./css/style15.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h3>Informacion sobre el producto</h3>
+      <form
+        action="/php/insertar_subasta.php"
+        method="post"
+        enctype="multipart/form-data"
+      >
+        <fieldset>
+          <legend id="ch1">Datos Basicos</legend>
+          <label id="ch2" for="nombre">Nombre</label> <br />
 
-                <input type="text" name="nombre" id="nombre" size="50" maxlength="250" />
-                <br/><br />
-                <label id="ch3"  for="descripcion">Descripcion</label><br />
-                <textarea name="descripcion" id="descripcion" cols="40" rows="5"></textarea>
-                <br /><br />
-                Foto <input id="ch4" type="file" name="foto" />
+          <input
+            type="text"
+            name="nombre"
+            id="nombre"
+            size="50"
+            maxlength="250"
+          />
+          <br /><br />
+          <label id="ch3" for="descripcion">Descripcion</label><br />
+          <textarea
+            name="descripcion"
+            id="descripcion"
+            cols="40"
+            rows="5"
+          ></textarea>
+          <br /><br />
+          Foto <input id="ch4" type="file" name="foto" />
 
-                <br/><br/>
-                Foto <input type="checkbox" value="si" />Añadir contador de visitas
-            </fieldset>
+          <br /><br />
+          Foto <input type="checkbox" value="si" />Añadir contador de visitas
+        </fieldset>
 
-            <fieldset>
-                <legend id="ch5" >Datos economicos</legend>
-                <label id="ch6" for="precio">Precio</label>
-                <input type="text" size="5" id="precio" name="precio" />  &euro;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <label id="ch7" for="impuestos" >Impuestos</label>
-                <select id="impuestos" name="impuestos">
-                    <option value="4">4%</option>
-                    <option value="7">7%</option>
-                    <option value="16">16%</option>
-                    <option value="25">25%</option>
-                </select>
-                <br/><br/>
-                <label id="ch8" >Promocion</label><br/>
-                <input type="radio" name="promocion" value="ninguno" checked="checked" /> Ninguno <br/>
+        <fieldset>
+          <legend id="ch5">Datos economicos</legend>
+          <label id="ch6" for="precio">Precio</label>
+          <input type="text" size="5" id="precio" name="precio" /> &euro;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <label id="ch7" for="impuestos">Impuestos</label>
+          <select id="impuestos" name="impuestos">
+            <option value="4">4%</option>
+            <option value="7">7%</option>
+            <option value="16">16%</option>
+            <option value="25">25%</option>
+          </select>
+          <br /><br />
+          <label id="ch8">Promocion</label><br />
+          <input
+            type="radio"
+            name="promocion"
+            value="ninguno"
+            checked="checked"
+          />
+          Ninguno <br />
 
-                <input type="radio" name="promocion" value="portes" /> Transporte gratuito <br/>
-                <input type="radio" name="promocion " value="descuento" /> Descuento 5%
-            </fieldset>
-        </form>
-        </div>
-    </body>
+          <input type="radio" name="promocion" value="portes" /> Transporte
+          gratuito <br />
+          <input type="radio" name="promocion " value="descuento" /> Descuento
+          5%
+        </fieldset>
+      </form>
+    </div>
+  </body>
 </html>
