--- a/HTMLV3/ejercicio6.html
+++ b/HTMLV3/ejercicio6.html
@@ -11,18 +11,32 @@
 
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Ejercicio 6</title>
-    <link rel="stylesheet" href="./css/style6.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style6.css" />
+  </head>
+  <body>
     <div id="container">
-    <h1 id="ch1">Mi sitio</h1>
-                <p id="ch2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, Doner iaculis posuere justo. Nam vel neque. Proin sagittis mauris sit amet nisl. Sed ipsum. Aliquam vitae justo.</p>
-                <h2 id="ch3">Ultimos proyectos</h2>
-                <p id="ch4">Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat, Aliquam dui ligula, porttitor eu, facilisis vitae, ornare sed, tortor</p>
-                <p id="ch5"><a href="portfolio/indice.html" title="Ultimos proyectos realizados por Mi Sitio">acceder a los ultimos proyectos de Mi Sitio</a></p>
-    </div>                
-</body>
+      <h1 id="ch1">Mi sitio</h1>
+      <p id="ch2">
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, Doner iaculis
+        posuere justo. Nam vel neque. Proin sagittis mauris sit amet nisl. Sed
+        ipsum. Aliquam vitae justo.
+      </p>
+      <h2 id="ch3">Ultimos proyectos</h2>
+      <p id="ch4">
+        Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis
+        dignissim justo, et euismod enim odio sit amet erat, Aliquam dui ligula,
+        porttitor eu, facilisis vitae, ornare sed, tortor
+      </p>
+      <p id="ch5">
+        <a
+          href="portfolio/indice.html"
+          title="Ultimos proyectos realizados por Mi Sitio"
+          >acceder a los ultimos proyectos de Mi Sitio</a
+        >
+      </p>
+    </div>
+  </body>
 </html>
